--- a/package.json
+++ b/package.json
@@ -7,14 +7,19 @@
     "type-check": "tsc"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.8.2",
+    "@types/styled-components": "^5.1.34",
     "next": "latest",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-redux": "^9.2.0",
+    "styled-components": "^6.1.19"
   },
   "devDependencies": {
     "@types/node": "^12.12.21",
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.1",
+    "cypress": "^14.5.4",
     "typescript": "^4.8.3"
   }
 }
